@startuml QuackstagramERD

entity "User" as user {
  + id : int
  + username : varchar(255)
  --
  bio : varchar(255)
  password : varchar(255)
}

entity "Picture" as picture {
  + imagePath : varchar(255)
  --
  caption : varchar(255)
  timestamp : TIMESTAMP
  authorId : int
}

entity "PictureLike" as picturelike {
  + id : int
  --
  likerId : int
  imagePath : varchar(255)
}

entity "Follow" as follow {
  + id : int
  --
  followerId : int
  targetId : int
  timestamp : TIMESTAMP
}

entity "Notification" as notification {
  + id : int
  --
  notifierId : int
  targetId : int
  imagePath : varchar(255)
  timestamp : TIMESTAMP
}

entity "UserSession" as usersession {
  + sessionId : int
  --
  userId : int
  lastActive : TIMESTAMP
}

user "1" -- "0..*" picture : "authorId"
user "1" -- "0..*" picturelike : "likerId"
user "1" -- "0..*" follow : "followerId"
user "1" -- "0..*" follow : "targetId"
user "1" -- "0..*" notification : "notifierId"
user "1" -- "1" usersession : "userId"
notification "0..*" -- "1" picture : "imagePath"
picture "1" -- "0..*" picturelike : "imagePath"

@enduml
